--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -2,23 +2,19 @@
   <section class="primary-navigation">
     <h1>WineFlix</h1>
     <ul class="navigation-links">
-      <li class="active">
-        <a href="https://developer.mozilla.org">Home</a>
-      </li>
-      <li>
-        <a href="https://developer.mozilla.org">Whites</a>
-      </li>
-      <li>
-        <a href="https://developer.mozilla.org">Reds</a>
-      </li>
-      <li>
-        <a href="https://developer.mozilla.org">Blends</a>
+      <li [class.active]="link.isActive" *ngFor="let link of links">
+          <app-link
+          [hrefUrl]="link.hrefUrl"
+          [name]="link.name"
+          ></app-link>
       </li>
     </ul>
   </section>
   <section class="secondary-navigation">
     <span class="user-avatar">
-      <a href="https://developer.mozilla.org">S</a>
+      <app-link
+      [hrefUrl]="'https://developer.mozilla.org'"
+      [name]="'S'"></app-link>
     </span>
   </section>
 </nav>
