--- a/src/app/keep-drinking/keep-drinking.component.html
+++ b/src/app/keep-drinking/keep-drinking.component.html
@@ -4,7 +4,7 @@
       <img src="{{wine.imageUrl}}" alt="{{wine.label}}" />
       <span [class.new-badge]="wine.isNew">New!</span>
       <div *ngIf="!wine.isFinished" class="amount-consumed">
-        <progress min="0" max="100" value="{{wine.progress}}"></progress>
+        <app-progress-bar [value]="wine.progress"></app-progress-bar>
       </div>
     </div>
   </li>
