--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -11,10 +11,6 @@
     </ul>
   </section>
   <section class="secondary-navigation">
-    <span class="user-avatar">
-      <app-link
-      [hrefUrl]="'https://developer.mozilla.org'"
-      [name]="'S'"></app-link>
-    </span>
+      <app-avatar></app-avatar>
   </section>
 </nav>
