--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -5,3 +5,18 @@
   right: 0;
   z-index: -1
 }
+
+.hero {
+  position: relative;
+  color: #fff;
+  overflow-y: hidden
+}
+
+.hero,
+.hero nav {
+  padding: 18px 48px
+}
+
+img {
+  max-width: 100%
+}
